src/objects/MLN_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Residual_Risk_Trend_Indicator__c</fullName>
        <formula>IMAGE(CASE( TEXT(Residual_Risk_Trend__c) , 
&apos;5 - Increasing&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kr&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;4 - Somewhat higher&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kq&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;3 - About the same&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028ks&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;2 - Somewhat lower&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kp&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 


&apos;1 - Decreasing&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028ko&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 

&quot;/s.gif&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays a colored arrow based on the text selected in the Post-Mitigation Risk Trend field. 
Can not be altered by user.</inlineHelpText>
        <label>Post-Mitigation Risk Trend Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Risk_Trend__c</fullName>
        <inlineHelpText>-Decreasing - risk level is improving 
-Somewhat lower - risk is improving but not dramatically 
-About the same - no significant changes 
-Somewhat higher - risk is rising but not as significantly as &quot;Up&quot; 
-Increasing - risk is rising significantly</inlineHelpText>
        <label>Post-Mitigation Risk Trend</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Decreasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Somewhat lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - About the same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Somewhat higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Increasing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Category_One__c</fullName>
        <inlineHelpText>Select the Risk Category One grouping that this risk belong to</inlineHelpText>
        <label>Risk Category One</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Category_Two__c</fullName>
        <inlineHelpText>On strategy risk – risk we take intentionally but want to limit exposure to a controlled range of potential impact 
Off strategy risk – risk we either do not intend to take or eliminate or minimize our exposure to potential impact, if possible</inlineHelpText>
        <label>Risk Category Two</label>
        <picklist>
            <picklistValues>
                <fullName>On Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Strategy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Control_Effectiveness_Value_GUESS__c</fullName>
        <formula>CASE( Risk_Control_Measures__c , &quot;Highly effective&quot;, 9, &quot;Appropriate&quot;, 4,&quot;Needs improvement&quot;, 0, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Control Effectiveness Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Control_Effectiveness_Value__c</fullName>
        <formula>CASE( Risk_Control_Measures__c , &quot;Highly effective&quot;, 9, &quot;Appropriate&quot;, 4,&quot;Needs improvement&quot;, 0, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Control Effectiveness Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Control_Measures__c</fullName>
        <description>Highly effective-Comprehensive and appropriately designed controls are in place and operating effectively; written policies and procedures exist and are strictly followed; regular monitoring/review;
Appropriate-Key controls are in place; written policies and procedures exist and are generally followed; periodic monitoring/review;
Needs improvement-Some controls may be in place, but controls do not adequately cover key risks; inadequate written policies and procedures exist; not monitored/reviewed.</description>
        <inlineHelpText>Please select the level of risk controls</inlineHelpText>
        <label>Risk Control Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appropriate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Improvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Exposure_Status__c</fullName>
        <inlineHelpText>Inherent - risk assessment scales are measured prior to implementing mitigations Transition - risk assessment scales are measured when mitigations are working progress 
Residual - risk assessment scales are measured after mitigation have been implemented</inlineHelpText>
        <label>Risk Exposure Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inherent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_ID__c</fullName>
        <displayFormat>R-{000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Risk_Source__c</fullName>
        <inlineHelpText>Select if the risk is internal, external or both</inlineHelpText>
        <label>Risk Source</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <inlineHelpText>Select the Risk Status for this risk</inlineHelpText>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance_Value__c</fullName>
        <formula>CASE( Risk_Tolerance__c , &quot;Low&quot;, 4, &quot;Moderate&quot;, 10,14)</formula>
        <label>Risk Tolerance Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance__c</fullName>
        <inlineHelpText>Please define the risk tolerance level for this risk.
Low: acceptable residual risk level &lt;= 4
Moderate: acceptable residual risk level &lt;= 10
High: acceptable residual risk level &lt;= 14</inlineHelpText>
        <label>Risk Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance_description__c</fullName>
        <label>Risk Tolerance</label>
        <length>25500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Trend_Indicator__c</fullName>
        <formula>IMAGE(CASE( TEXT(Risk_Trend__c) , 
&apos;5 - Increasing&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kr&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;4 - Somewhat higher&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kq&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;3 - About the same&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028ks&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 
&apos;2 - Somewhat lower&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028kp&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 


&apos;1 - Decreasing&apos;,&quot;/servlet/servlet.ImageServer?id=015b000000028ko&amp;oid=00Db0000000ZeSp&amp;lastMod=1376445625000&quot;, 

&quot;/s.gif&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Displays a colored arrow based on the text selected in the Risk Trend field. 
Can not be altered by user.</inlineHelpText>
        <label>Risk Trend Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Trend__c</fullName>
        <inlineHelpText>-Decreasing - risk level is improving
-Somewhat lower - risk is improving but not dramatically
-About the same - no significant changes 
-Somewhat higher - risk is rising but not as significantly as &quot;Up&quot; 
-Increasing - risk is rising significantly</inlineHelpText>
        <label>Risk Trend</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Decreasing</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - About the same</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Increasing</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Volatility_1__c</fullName>
        <inlineHelpText>help text</inlineHelpText>
        <label>Risk Volatility</label>
        <picklist>
            <picklistValues>
                <fullName>Volatile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay the same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less volatile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Volatility__c</fullName>
        <inlineHelpText>Select the assessed volatility for this risk</inlineHelpText>
        <label>Risk Volatility</label>
        <picklist>
            <picklistValues>
                <fullName>Don&apos;t know over the next 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Volatile over the next 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change over the next 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Volatile over the next 3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_code__c</fullName>
        <formula>case( Likelihood_number__c * Impact_number__c ,9,5,6,4,2,2,1,1,3)</formula>
        <inlineHelpText>5 - Requires action at earliest possible time							
4 - Requires action within reasonable time period.							
3 - Management should develop 
2 - Management should monitor this risk							
1 - No action required</inlineHelpText>
        <label>Risk Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_type__c</fullName>
        <label>Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Key risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speed_to_Onset__c</fullName>
        <inlineHelpText>The speed of the effect of the risk on the organization</inlineHelpText>
        <label>Speed to Onset</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Slow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Slow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Fast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Almost Immediate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tail_loss__c</fullName>
        <description>Please fill in the tail exposure, which is the 95 percentile of the loss distribution.</description>
        <inlineHelpText>The tail exposure amount is also the catastrophic exposure. This is developed in Adaero software by a probability distribution based on the risk likelihood and impact assessment. This data will be updated by Milliman or designated staff at Ascension.</inlineHelpText>
        <label>Tail exposure</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trend__c</fullName>
        <label>Trend</label>
        <picklist>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Risk_Status__c</columns>
        <columns>Risk_Source__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Complex_Risk_Assessment</fullName>
        <columns>NAME</columns>
        <columns>Risk_Status__c</columns>
        <columns>Residual_Risk_Level__c</columns>
        <columns>Risk_Tolerance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Category__c</field>
            <operation>equals</operation>
            <value>Entitiy 1</value>
        </filters>
        <label>Complex Risk Assessment</label>
    </listViews>
    <listViews>
        <fullName>Comprehensive_Risk_Assessment</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MLN_Risk__c.Comprehensive_Risk_Assessment</value>
        </filters>
        <label>Comprehensive Risk Assessment</label>
    </listViews>
    <listViews>
        <fullName>Costco_GRC_Demo</fullName>
        <columns>NAME</columns>
        <columns>Current_Risk_Likelihood__c</columns>
        <columns>Current_Risk_Impact__c</columns>
        <columns>Risk_Control_Measures__c</columns>
        <columns>Residual_Risk_Level__c</columns>
        <columns>Further_Action_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Orgnization_Name__c</field>
            <operation>equals</operation>
            <value>Costco</value>
        </filters>
        <label>Costco GRC Demo</label>
    </listViews>
    <listViews>
        <fullName>Key_Risks</fullName>
        <columns>NAME</columns>
        <columns>Risk_Status__c</columns>
        <columns>Parent_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Risk_Status__c</field>
            <operation>equals</operation>
            <value>Key Risk</value>
        </filters>
        <label>Key Risks</label>
    </listViews>
    <listViews>
        <fullName>Physicians_Insurance_A_Mutual_Company</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Risk_type__c</columns>
        <columns>Current_rank__c</columns>
        <columns>Last_year_s_rank__c</columns>
        <columns>Risk_code__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MLN_Risk__c.Physicians_Insurance_Risk_Assessment</value>
        </filters>
        <label>Physicians Insurance A Mutual Company</label>
    </listViews>
    <listViews>
        <fullName>R_D</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MLN_Risk__c.R_D</value>
        </filters>
        <label>R&amp;D</label>
    </listViews>
    <listViews>
        <fullName>Retail_Risk_Assessment</fullName>
        <columns>NAME</columns>
        <columns>Current_Risk_Likelihood__c</columns>
        <columns>Current_Risk_Impact__c</columns>
        <columns>Risk_Control_Measures__c</columns>
        <columns>Residual_Risk_Level__c</columns>
        <columns>Further_Action_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Category__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>Retail Risk Assessment</label>
    </listViews>
    <listViews>
        <fullName>Simple_Risk_Assessment</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Operational_Owner__c</columns>
        <columns>Residual_Risk_Level__c</columns>
        <columns>Risk_Tolerance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MLN_Risk__c.Simple_Risk_Assessment</value>
        </filters>
        <label>Simple Risk Assessment</label>
    </listViews>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <recordTypes>
        <fullName>Complex_Risk_Assessment</fullName>
        <active>true</active>
        <label>Complex Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comprehensive_Risk_Assessment</fullName>
        <active>true</active>
        <label>Comprehensive Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Costco_Demo</fullName>
        <active>true</active>
        <label>Costco Demo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Model_Risk</fullName>
        <active>true</active>
        <label>Model Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physicians_Insurance_Risk_Assessment</fullName>
        <active>true</active>
        <label>Physicians Insurance Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_D</fullName>
        <active>true</active>
        <label>R&amp;D</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_risk_records</fullName>
        <active>true</active>
        <label>Retail risk records</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple_Risk_Assessment</fullName>
        <active>true</active>
        <label>Simple Risk Assessment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Control_effectiveness_score</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Control_Effectiveness__c &lt;1.0 ,Control_Effectiveness__c &gt;3.0 )</errorConditionFormula>
        <errorDisplayField>Control_Effectiveness__c</errorDisplayField>
        <errorMessage>Please fix the entry, Control Effectiveness score should not be lower than 1, or higher than 3.</errorMessage>
    </validationRules>
</CustomObject>